main 화면 탭 구성 수정 다른 화면 -> main으로 올때 기본으로 items tab이 선택되도록 함

--- a/Pages/main/intro.html
+++ b/Pages/main/intro.html
@@ -118,16 +118,16 @@ margin-top: 0.25rem;
 
 <div class="tabs-container">
 <input type="radio" name="tabs" id="user" hidden {{#if {{equal::{{getvar::category}}::user}}}}checked{{/if}}>
-<label for="user" class="tabs" risu-btn="user">마왕</label>
+<label for="user" class="tabs" risu-btn="user">▋마왕</label>
 
 <input type="radio" name="tabs" id="king" hidden {{#if {{equal::{{getvar::category}}::king}}}}checked{{/if}}>
-<label for="king" class="tabs" risu-btn="king">광왕</label>
+<label for="king" class="tabs" risu-btn="king">▋광왕</label>
 
 <input type="radio" name="tabs" id="play" hidden {{#if {{equal::{{getvar::category}}::play}}}}checked{{/if}}>
-<label for="play" class="tabs" risu-btn="play">플레이</label>
+<label for="play" class="tabs" risu-btn="play">▋플레이</label>
 
 <input type="radio" name="tabs" id="system" hidden {{#if {{equal::{{getvar::category}}::system}}}}checked{{/if}}>
-<label for="system" class="tabs" risu-btn="system">시스템</label>
+<label for="system" class="tabs" risu-btn="system">▋시스템</label>
 </div>
 
 <div class="tab-content">
