--- a/Pages/congif/config.html
+++ b/Pages/congif/config.html
@@ -1,12 +1,174 @@
-<body>
+<style>
+.settings-content {
+background-color: #303030;
+padding: 1.5rem;
+border: 1px solid #555;
+border-bottom-left-radius: 0.5rem;
+border-bottom-right-radius: 0.5rem;
+min-height: 16rem;
+}
+
+.setting-label {
+font-weight: bold;
+color: #ccc;
+}
+
+/* CSS-only Toggle Switch */
+.switch-container {
+display: flex;
+align-items: center;
+gap: 0.75rem;
+}
+.switch {
+position: relative;
+display: inline-block;
+width: 3rem;
+height: 1.5rem;
+flex-shrink: 0;
+}
+.switch input {
+opacity: 0;
+width: 0;
+height: 0;
+}
+.slider {
+position: absolute;
+cursor: pointer;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+background-color: #444;
+border: 1px solid #666;
+border-radius: 1rem;
+}
+.slider:before {
+position: absolute;
+content: "";
+height: 1rem;
+width: 1rem;
+left: 0.2rem;
+bottom: 3px;
+background-color: #ccc;
+border-radius: 1rem;
+}
+input:checked + .slider {
+background-color: #60d9f7;
+}
+input:checked + .slider:before {
+transform: translateX(1.5rem);
+background-color: white;
+}
+
+.setting-description {
+font-size: 0.85em;
+color: #aaa;
+margin-top: 0.25rem;
+}
+
+@media screen and (max-width: 600px) {
+    .settings-content {
+    padding: 1rem;
+    }
+    .switch {
+    height: 1.2rem;
+    width: 2.5rem;
+    }
+    .slider:before {
+    position: absolute;
+    content: "";
+    height: 0.8rem;
+    width: 0.8rem;
+    left: 0.2rem;
+    bottom: 3px;
+    background-color: #ccc;
+    border-radius: 1rem;
+    }
+    input:checked + .slider:before {
+    transform: translateX(1.5em);
+    }
+}
+</style>
+
 <div class="container">
 <div class="line double"></div>
 
 <header class="header">
-<h1 style='text-align:left;border-bottom:solid 1px;width:100%;padding:1rem 0;margin:0;'>▋설정</h1>
+<h1>▋ 게임 설정</h1>
 </header>
+
+<main>
+
+<div class="tabs-container">
+<input type="radio" name="tabs" id="play" hidden {{#if {{equal::{{getvar::category}}::play}}}}checked{{/if}}>
+<label for="play" class="tabs" risu-btn="play">▋플레이</label>
+
+<input type="radio" name="tabs" id="system" hidden {{#if {{equal::{{getvar::category}}::system}}}}checked{{/if}}>
+<label for="system" class="tabs" risu-btn="system">▋시스템</label>
+</div>
+
+<div class="tab-content">
+<div class="info-grid">
+{{#when::category::vis::play}}
+<div class='btn command-btn' risu-btn='difficulty'><strong>난이도: </strong>{{getvar::difficulty}}</div>
+<div risu-btn="blockDeath" style="grid-column: 1 / -1;">
+<label class="setting-label">사망 방지</label>
+<label class="switch">
+<input type="checkbox" name="death-prevent" {{#when::blockDeath::vis::1}}checked{{/when}}>
+<span class="slider"></span>
+</label>
+
+{{#when::blockDeath::vis::0}}
+<p class="setting-description">체력이 0이 되면 캐릭터가 영구적으로 사망합니다.</p>
+{{/when}}
+{{#when::blockDeath::vis::1}}
+<p class="setting-description">체력이 0이 되어도 캐릭터가 사망하지 않습니다.</p>
+{{/when}}
+</div>
+{{/when}}
+
+{{#when::category::vis::system}}
+<div risu-btn="history" style="grid-column: 1 / -1;">
+<label class="setting-label">로그 표시</label>
+<label class="switch">
+<input type="checkbox" name="history" {{#when::history::vis::1}}checked{{/when}}>
+<span class="slider"></span>
+</label>
+
+{{#when::history::vis::0}}
+<p class="setting-description">조교 및 전투 로그를 숨깁니다.</p>
+{{/when}}
+{{#when::history::vis::1}}
+<p class="setting-description">조교 및 전투 로그를 보여줍니다.</p>
+{{/when}}
+</div>
+<div risu-btn="debug" style="grid-column: 1 / -1;">
+<label class="setting-label">디버그 표시</label>
+<label class="switch">
+<input type="checkbox" name="debug" {{#when::debug::vis::1}}checked{{/when}}>
+<span class="slider"></span>
+</label>
+
+{{#when::debug::vis::0}}
+<p class="setting-description">콘솔에 디버그 메시지를 출력하지 않습니다.</p>
+{{/when}}
+{{#when::debug::vis::1}}
+<p class="setting-description">콘솔에 디버그 메시지를 출력합니다.</p>
+{{/when}}
+</div>
+{{/when}}
+</div>
+</div>
+</main>
+
+<div class="line double"></div>
+
+<section class="command-panel">
+<h3>▋Commands</h3>
 <div class="command-container">
-{{getvar::cmds}}
+{{getVar::cmds}}
 </div>
+</section>
+
+<div class="line double"></div>
 </div>
-</body>
