--- a/Pages/main/intro.html
+++ b/Pages/main/intro.html
@@ -67,7 +67,7 @@ border-color: #888;
 
 {{#when::category::vis::play}}
 <div class='two-cells' risu-btn='difficulty'>
-<strong>조교 난이도</strong>
+<label><b>조교 난이도</b></label>
 <label class="triple-switch">
 <input type="radio" name="difficulty" id="one" {{#when::difficulty::vis::쉬움}}checked{{/when}}>
 <input type="radio" name="difficulty" id="two" {{#when::difficulty::vis::보통}}checked{{/when}}>
@@ -87,7 +87,7 @@ border-color: #888;
 </div>
 
 <div class="two-cells" risu-btn="blockDeath">
-<strong>사망 방지</strong>
+<label><b>사망 방지</b></label>
 <label class="switch">
 <input type="checkbox" name="death-prevent" {{#when::blockDeath::vis::1}}checked{{/when}}>
 <span class="slider"></span>
@@ -104,7 +104,7 @@ border-color: #888;
 
 {{#when::category::vis::system}}
 <div class="two-cells" risu-btn="history">
-<strong>로그 표시 </strong>
+<label><b>로그 표시</b></label>
 <label class="switch">
 <input type="checkbox" name="history" {{#when::history::vis::1}}checked{{/when}}>
 <span class="slider"></span>
@@ -119,7 +119,7 @@ border-color: #888;
 </div>
 
 <div class="two-cells" risu-btn="debug">
-<strong>디버그 표시 </strong>
+<label><b>디버그 표시</b></label>
 <label class="switch">
 <input type="checkbox" name="debug" {{#when::debug::vis::1}}checked{{/when}}>
 <span class="slider"></span>
@@ -135,7 +135,7 @@ border-color: #888;
 
 <div style="grid-column: 1 / -1;"><h3>* 모델 선택</h3></div>
 <div class="two-cells" risu-btn="trainResponse">
-<strong>조교 반응 </strong>
+<label><b>조교 반응</b></label>
 <label class="switch">
 <input type="checkbox" name="trainResponse" {{#when::{{dict_element::{{getvar::models}}::trainResponse}}::is::1}}checked{{/when}}>
 <span class="slider"></span>
@@ -150,7 +150,7 @@ border-color: #888;
 </div>
 
 <div class="two-cells" risu-btn="trainLog">
-<strong>조교 로그 </strong>
+<label><b>조교 로그</b></label>
 <label class="switch">
 <input type="checkbox" name="trainLog" {{#when::{{dict_element::{{getvar::models}}::trainLog}}::is::1}}checked{{/when}}>
 <span class="slider"></span>
