--- a/Pages/train/preTrain.html
+++ b/Pages/train/preTrain.html
@@ -57,11 +57,11 @@ height: 0.3rem !important;
 <div class="sort-btn {{#if {{equal::{{getvar::charSort}}::index}}}}active{{/if}}" risu-btn="sort_index">번호순</div>
 <div class="sort-btn {{#if {{equal::{{getvar::charSort}}::name}}}}active{{/if}}" risu-btn="sort_name">이름순</div>
 <div class="sort-btn {{#if {{equal::{{getvar::charSort}}::level}}}}active{{/if}}" risu-btn="sort_level">레벨순</div>
-<div class="sort-btn {{#if {{equal::{{getvar::charSort}}::hp}}}}active{{/if}}" risu-btn="sort_hp">위급순</div>
+<div class="sort-btn {{#if {{equal::{{getvar::charSort}}::hp}}}}active{{/if}}" risu-btn="sort_hp">HP순</div>
 </div>
 </div>
 
-<main class="character-list">
+<main class="info-grid" style="grid-template-columns: 1fr;">
 
 {{getvar::charList}}
 
