--- a/Pages/Shop/shop.html
+++ b/Pages/Shop/shop.html
@@ -8,9 +8,10 @@ margin-bottom: 0.3rem;
 }
 
 .shop-content {
-background-color: #303030;
+background-color: #1a1a1a;
 padding: 0.5rem;
 border-radius: 4px;
+border: 1px solid #333;
 }
 
 .shop-pane {
@@ -29,10 +30,10 @@ gap: 0.5rem 1rem;
 display: flex;
 align-items: center;
 gap: 1rem;
-background-color: #444;
+background-color: #222;
 padding: 0.2rem;
 border-radius: 0.5rem;
-border: 2px solid #555;
+border: 1px solid #333;
 transition: background-color 0.2s, border-color 0.2s;
 cursor: pointer;
 }
@@ -70,8 +71,9 @@ font-size: 0.9em;
 .purchase-footer {
 margin-top: 0.5rem;
 padding: 0.5rem;
-border-top: 1px solid #555;
-background-color: #383838;
+border-top: 1px solid #333;
+background-color: #1a1a1a;
+border: 1px solid #333;
 border-radius: 4px;
 display: flex;
 justify-content: space-between;
@@ -88,11 +90,12 @@ flex-grow: 1;
 }
 
 .selected-item-display {
-background-color: #2a2a2a;
+background-color: #222;
 padding: 0.5rem 1rem;
 border-radius: 4px;
 text-align: center;
 flex-grow: 1;
+border: 1px solid #333;
 }
 
 .selected-item-name {
@@ -104,18 +107,18 @@ color: #e0e0e0;
 display: flex;
 align-items: center;
 gap: 0.5rem;
-background-color: #2a2a2a;
+background-color: #222;
 padding: 0.25rem;
 border-radius: 25px; /* Rounded pill shape */
-border: 1px solid #555;
+border: 1px solid #444;
 flex-shrink: 0;
 }
 
 .quantity-btn {
 width: 28px;
 height: 28px;
-border: 1px solid #666;
-background-color: #555;
+border: 1px solid #555;
+background-color: #333;
 color: #fff;
 cursor: pointer;
 border-radius: 50%; /* Circular buttons */
@@ -125,7 +128,7 @@ line-height: 1;
 transition: background-color 0.2s;
 }
 .quantity-btn:hover {
-background-color: #6a6a6a;
+background-color: #444;
 }
 
 .quantity-display {
@@ -140,8 +143,8 @@ color: #e0e0e0;
 .total-price {
 font-size: 1.2em;
 white-space: nowrap;
-min-width: 10em; /* Set a minimum width to prevent layout shifts */
-text-align: right; /* Align text to the right for a stable appearance */
+min-width: 10em;
+text-align: right;
 }
 
 .price-value {
@@ -158,7 +161,9 @@ color: red;
 padding: 0.5rem 1.5rem;
 font-size: 1em;
 font-weight: bold;
-background-color: #5a5a5a;
+background-color: #333;
+border: 1px solid #444;
+color: #ccc;
 }
 
 .purchase-btn.x-risu-exceed:hover{
@@ -288,7 +293,7 @@ box-shadow: 0px 0px 20px -2px #a00606;
 <div class="selected-item-display">
 <span class="selected-item-name">{{getvar::itemName}}</span>
 </div>
-{{#when::category::vis::조교도구}}{{:else}}
+{{#when::{{and::{{notequal::{{getvar::category}}::tools}}::{{notequal::{{getvar::category}}::unlock}}}}}}
 <div class="item-quantity-selector">
 <button class="quantity-btn" risu-btn="minus">-</button>
 <span class="quantity-display">{{getvar::itemQuantity}}</span>
@@ -307,11 +312,9 @@ box-shadow: 0px 0px 20px -2px #a00606;
 
 <div class="line single"></div>
 <section class="command-panel">
-<h3>▋Commands</h3>
-<div class="command-container">
+
 {{getVar::cmds}}
-</div>
+
 {{getvar::screenEffect}}
 </section>
-<div class="line double"></div>
 </div>
