--- a/Pages/train/postTrain.html
+++ b/Pages/train/postTrain.html
@@ -3,17 +3,19 @@
 display: grid;
 grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 gap: 0.5rem;
-background-color: #303030;
+background-color: #1a1a1a;
 padding: 1rem;
 border-radius: 4px;
+border: 1px solid #333;
 }
 .stat-item {
 display: flex;
 justify-content: space-between;
 align-items: center;
-background-color: #2a2a2a;
+background-color: #222;
 padding: 0.2rem 0.5rem;
 border-radius: 4px;
+border: 1px solid #333;
 }
 .stat-label {
 font-weight: bold;
@@ -128,14 +130,6 @@ box-shadow: 0px 0px 20px -2px #a00606;
 {{getvar::traceText}}
 </div>
 </section>
-<!--<div class="line single"></div>-->
-
-<section class="command-panel">
-<h3>▋Commands</h3>
-<div class="command-container">
-{{getVar::cmds}}
-</div>
-</section>
-
-<div class="line double"></div>
+<div class="line single"></div>
+<div>{{getVar::cmds}}</div>
 </div>
