--- a/Pages/train/train.html
+++ b/Pages/train/train.html
@@ -8,9 +8,10 @@ height: 0.6rem;
     flex-wrap: wrap;
     gap: 1rem;
     align-items: flex-start;
-    background-color: #303030;
+    background-color: #1a1a1a;
     padding: 1rem;
     border-radius: 4px;
+    border: 1px solid #333;
 }
 
 .target-visuals {
@@ -24,7 +25,7 @@ height: 0.6rem;
     width: 128px;
     height: 128px;
     background-color: #111;
-    border: 1px solid #444;
+    border: 1px solid #333;
     flex-shrink: 0;
     border-radius: 8px;
     overflow: hidden;
@@ -68,7 +69,7 @@ height: 0.6rem;
     width: 70%;
     height: 100%;
     background-color: #111;
-    border: 1px solid #444;
+    border: 1px solid #333;
     border-radius: 4px;
     padding: 2px;
     display: flex;
@@ -99,13 +100,14 @@ height: 0.6rem;
     gap: 0.5rem;
 }
 .detail-item {
-    background-color: #2a2a2a;
+    background-color: #222;
     padding: 0.4rem 0.6rem;
     border-radius: 4px;
     font-size: 0.9em;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border: 1px solid #333;
 }
 .detail-label {
     font-weight: bold;
@@ -124,7 +126,7 @@ height: 0.6rem;
     display: flex;
     /*justify-content: space-between;*/
     align-items: center;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
     gap: 1rem;
 }
 .stats-header h2 {
@@ -140,15 +142,15 @@ height: 0.6rem;
 #stats-collapsed:checked ~ .stats-header .collapse-btn {
     display: none;
 }
-#stats-collapsed:checked ~ .info-grid {
+/*#stats-collapsed:checked ~ .info-grid {
     display: none;
-}
+}*/
 
 /*.stats-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
     gap: 0.5rem;
-    background-color: #303030;
+    background-color: #1a1a1a;
     padding: 1rem;
     border-radius: 4px;
 }*/
@@ -156,9 +158,10 @@ height: 0.6rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #2a2a2a;
+    background-color: #222;
     padding: 0.2rem 0.5rem;
     border-radius: 4px;
+    border: 1px solid #333;
 }
 .stat-label {
     font-weight: bold;
@@ -167,7 +170,7 @@ height: 0.6rem;
 .ejaculation-section h3 {
     margin-bottom: 0.75rem;
     font-size: 1.1em;
-    border-bottom: 1px solid #444;
+    border-bottom: 1px solid #333;
     padding-bottom: 0.5rem;
 }
 
@@ -177,7 +180,7 @@ height: 0.6rem;
 
 .log-content {
     background-color: #111;
-    border: 1px solid #444;
+    border: 1px solid #333;
     padding: 1rem;
     min-height: 100px;
     max-height: 400px;
@@ -476,13 +479,14 @@ animation: text-appear-and-fade 2.0s ease-in-out forwards;
 <input type="radio" name="stats-toggle" id="stats-expanded" {{#if {{? {{getvar::statFold}}=0}}}}checked{{/if}} hidden>
 <input type="radio" name="stats-toggle" id="stats-collapsed" {{#if {{? {{getvar::statFold}}=1}}}}checked{{/if}} hidden>
 <div class="stats-header">
-<h2>* Stats</h2>
-<div class="toggle-buttons">
+<h2 style="border: none;">* Stats</h2>
+<div class="toggle-buttons" style="display:inline-block">
 <label for="stats-collapsed" class="toggle-btn collapse-btn x-risu-btn" risu-btn="close">접기</label>
 <label for="stats-expanded" class="toggle-btn expand-btn x-risu-btn" risu-btn="open">펼치기</label>
 </div>
 </div>
-<div class="info-grid">
+{{#when::statFold::vis::0}}
+<div class="info-grid" style="border-top: 1px solid #333; padding-top:0.5rem">
 <div class="stat-item"><span class="stat-label">C쾌락</span> <div class="rating heart {{#when::{{dict_element::{{getvar::stat}}::C쾌락}}::is::10}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::stat}}::C쾌락}}"></div></div>
 <div class="stat-item"><span class="stat-label">V쾌락</span> <div class="rating heart {{#when::{{dict_element::{{getvar::stat}}::V쾌락}}::is::10}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::stat}}::V쾌락}}"></div></div>
 <div class="stat-item"><span class="stat-label">A쾌락</span> <div class="rating heart {{#when::{{dict_element::{{getvar::stat}}::A쾌락}}::is::10}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::stat}}::A쾌락}}"></div></div>
@@ -508,8 +512,8 @@ S쾌락은 일단 숨겨두기
 <div class="stat-item"><span class="stat-label">불쾌</span> <div class="rating skull {{#when::{{dict_element::{{getvar::stat}}::불쾌}}::is::10}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::stat}}::불쾌}}"></div></div>
 <div class="stat-item"><span class="stat-label">저항</span> <div class="rating skull {{#when::{{dict_element::{{getvar::stat}}::저항}}::is::10}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::stat}}::저항}}"></div></div>
 </div>
+{{/when}}
 </section>
-
 <div class="line single"></div>
 
 <section class="ejaculation-section">
